# hasktris

./: LICENSE  README.md  hasktris.cabal
app/: Main.hs
src/: Tris.hs
