name:                hasktris
version:             0.1.0.0
homepage:            https://github.com/albeco/hasktris
license:             BSD3
license-file:        LICENSE
author:              Alberto Comin
maintainer:          albeko@gmail.com
copyright:           2017 Alberto Comin
category:            console game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
synopsis:            Tic-Tac-Toe game
description:
  Hasktris is a text-based TicTacToe game.
  To start a game use the function 'startGame' with the choosen
  algorithm (e.g. "startGame alphabeta").
  There are two implemented algorithms: 'negamax', which does not
  do any pruning, and 'alphabeta', which does alpha-beta pruning.
  Of course pruning is not needed for such as simple game, the
  purpose of the application is to test possible implementations
  of the negamax algorithm in Haskell.  

library
  hs-source-dirs:      src
  exposed-modules:     Tris
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , random
  default-language:    Haskell2010

executable hasktris-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hasktris
  default-language:    Haskell2010

test-suite hasktris-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hasktris
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/albeco/hasktris
